# ece414-Hughes-Crean

Lab1/: blink2.c
Lab2 - Copy/: CMakeLists.txt  led_out.c  led_out.h  main.c  sw_in.c  sw_in.h
Lab3/: CMakeLists.txt  debounce_sw1.h  debounce_sw2.h  led_out.c  led_out.h  main.c  sw_in.c  sw_in.h
Lab4/: CMakeLists.txt  Main1.c  ts_lcd.c
Lab4/sch/Lab4/: Lab4.kicad_pro  Lab4.kicad_sch
Lab5/: CMakeLists.txt  TouchDisplay.c  TouchDisplay.h  inputnum.c  inputnum.h  main.c  ts_lcd.c
Project1/: CMakeLists.txt  main.c
Project1/Accel/: Accel.c  CMakeCache.txt  CMakeLists.txt
Project1/hc-sr04/: hc-sr04.c
control/: CarPresentationCode  Car_Code  Car_Code.ino  Computation.cpp  Computation.h  ControllerPresentationCode  control.ino  hcsr04.cpp  hcsr04.h
hcsr04_code/: demo_main.ino  hcsr04.cpp
