cmake_minimum_required(VERSION 3.13)
include(pico_sdk_import.cmake)
project(Lab5) # Change to your project name
pico_sdk_init()
add_executable(Lab5) # Change to your project name
pico_generate_pio_header(Lab5 ${CMAKE_CURRENT_LIST_DIR}/SPIPIO.pio)
# Ensure SPIPIO.pio is in your directory
target_sources(Lab5 PRIVATE
    main.c
    TouchDisplay.c
    inputnum.c
    ts_lcd.c
    TouchScreen.c
    TFTMaster.c
    glcdfont.c
    timer.c
    )
target_link_libraries(Lab5 PRIVATE
    pico_stdlib
    hardware_adc
    hardware_gpio
    hardware_pio
    hardware_irq
    pico_bootsel_via_double_reset
    )
pico_add_extra_outputs(Lab5)